--- a/Flood Risk Damage Predictions Notebook v2.ipynb
+++ b/Flood Risk Damage Predictions Notebook v2.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Business Value**: By providing the characteristics of a given property as it pertains to flood risk, this model predicts the expected damage ratio (property damage: property value ratio)\n",
     "\n",
-    "**Machine Learning Model**: The best performing model was found to be an XGBoost model which outperformed Random Forest and Linear Regression model\n",
+    "**Machine Learning Model**: The best performing model was found to be a Random Forest model which outperformed XGBoost and Linear Regression models\n",
     "\n",
     "Source website: https://www.fema.gov/openfema-data-page/fima-nfip-redacted-claims-v2"
    ]
